--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scatch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/DrShambala/SCATCH#readme",
   "dependencies": {
+    "config": "^4.0.0",
     "cookie-parser": "^1.4.7",
+    "debug": "^4.4.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.16.0"
