--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scatch",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/DrShambala/SCATCH#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "config": "^4.0.0",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
+    "dotenv": "^16.6.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0"
   }
 }
