--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scatch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,7 +23,7 @@
     "config": "^4.0.0",
     "cookie-parser": "^1.4.7",
     "debug": "^4.4.1",
-    "dotenv": "^16.6.0",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
